refactor: :art: improve .env.example information

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
-REPORT_GAS=false
 
+# Infura Private key for Rinkeby or others
 INFURA_API_KEY=
 
-BSC_DEPLOYER_KEY=
-
+# Blockchain Scanners API
 BSCSCAN_API_KEY=
 ETHERSCAN_API_KEY=
 
+# Deployers
+# - Specific Deployer KEY for the BSC Network
+BSC_DEPLOYER_KEY=
+# - Global Deployer KEY 
 PRIVATE_KEY_DEPLOYER=
+
+#Testing
+REPORT_GAS=false
