--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,13 @@
 name: Test
 on:
   push:
-    branches: [master, BO-0001]
-
+    branches: [master]
+    paths:
+      - "contracts/**"
+      - "test/**"
+      - "utils/**"
   pull_request:
-    branches: [master, BO-0001]
+    branches: [master]
     paths:
       - "contracts/**"
       - "test/**"
